--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="dist/css/style.css">
 	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script async src="https://script.click-chat.ru/chat.js?wid=77c32417-0290-4a65-8417-fd2b7be074e0"></script>
 </head>
 <body class="is-boxed has-animations">
 
